# zad2-MateuszSzlachetko

./: CMakeLists.txt  README.md
inc/: complex.h  complex_equation.h  exam.h  statistics.h
src/: Complex.cpp  README.md  complex.cpp  complex_equation.cpp  exam.cpp  main.cpp  statistics.cpp
tst/: CMakeLists.txt  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp
